<resources>
    <string name="app_name">XChange</string>
    <!-- Strings related to login -->
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_trades">My Items</string>
    <string name="title_profile">Profile</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="logout">Logout</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="auth_failed">Falied to login</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_add">Post</string>
    <string name="title_item">Title</string>
    <string name="desc_item">Description</string>
    <string name="Submit">Submit</string>
    <string name="cat_item">Category</string>

    <string name="enterTitle">enter the item title</string>
    <string name="enterDesc">describe your item in few words.</string>
    <string name="enterCat">enter item category</string>

    <string-array name="estate">
        <item>UP</item>
        <item>MP</item>
        <item>Delhi</item>
        <item>AP</item>
        <item>TamilNadu</item>
        <item>Chandigarh</item>
        <item>Assam</item>
        <item>Jammu and kashmir</item>
        <item>Ladakh</item>
        <item>Bihar</item>
    </string-array>

    <string-array name="category">
        <item>Automobile</item>
        <item>Books</item>
        <item>Electronic</item>
        <item>Sports</item>
        <item>Video Game</item>
        <item>Music</item>
        <item>Clothing</item>
        <item>Computer Accesories</item>
    </string-array>
</resources>
