<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_add"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    tools:context=".ui.add.AddFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">


            <ImageView
                android:id="@+id/imageSelect"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                app:srcCompat="@drawable/upload" />

    </LinearLayout>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:orientation="horizontal">
    <Spinner
        android:id="@+id/spinnerState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <Spinner
        android:id="@+id/spinnerCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />
</LinearLayout>

    <EditText
        android:id="@+id/itemTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/enterTitle"
        android:padding="10dp"
        android:background="@drawable/bg_edit_text"
        android:layout_marginBottom="16dp" />

    <com.santalu.maskedittext.MaskEditText
        android:id="@+id/editPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_edit_text"
        android:hint="Telephone"
        android:inputType="phone"
        android:padding="10dp"
        app:met_mask="+91(###) ### ## ##" />


    <EditText
        android:id="@+id/itemDescription"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:hint="@string/enterDesc"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:background="@drawable/bg_edit_text"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/whiteColor"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/Submit"
        android:textColor="@color/colorPrimary" />

</LinearLayout>
